--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,124 @@
-body {
+/* Root element */
+:root {
+    --darkred: #7B0202;
+    --lightred: #AB2F1D;
+    --darkorange: #D78041;
+    --lightorange: #F2A766;
+    --white: #fff;
+    --peach: #faebd75e;
+}
+/* Style for the whole site */
+
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+  }
+
+body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 16px;
     background-color: rgba(250, 235, 215, 0.37);
+    max-width: 1440px;
 }
 
-
-header > nav{
-    background-color: blanchedalmond;
-    
+p {
+    line-height: 1.5;
 }
-ul >li > a{
+
+/* Grid for the index page */
+.index-container {
+    display: grid;
+    grid-template-rows: auto auto auto;
+}
+
+/* Header section */
+header {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--darkred);
+}
+
+/* Navigation in the header */
+header > nav li a{
     text-decoration: none;
-    color: white;
-    margin: 10px;
-
+    color: var(--white);
+    font-size: 1.5rem;
+    transition: all .2s ease-in-out;
 }
+
+header nav li {
+    padding-right: 4rem;
+}
+
+header nav li:hover a {
+    color: var(--lightorange);
+    cursor: pointer;
+}
+
+/* Grid for the main section of the index page */
+
+.index-main {
+    display: grid;
+    grid-template-areas: 
+    'hero'
+    'market'
+    'event'
+    ;
+    grid-template-rows: .7fr 1fr 1fr;
+}
+/* Hero section for the index page */
+.index-main .hero {
+    grid-area: hero;
+    background-image: url("../images/hero.jpg");
+}
+
+.index-main .hero h1 {
+    margin: 1.3rem 2rem 0;
+    font-size: 6vw;
+    font-weight: 200;
+    color: var(--white);
+    text-shadow: 2px 2px 1px var(--black);
+}
+
+/* Market section for the index page */
+
+.index-main .market {
+    grid-area: market;
+    display: grid;
+    grid-template-columns: 1.7fr 1fr;
+}
+
+.market * {
+    margin: 1rem;
+    font-size: 1.1rem;
+}
+
+.market h2 {
+    font-size: 2rem;
+}
+
+table{
+    text-align: left;
+}
+/* Events section for the index page */
+
+.index-main .event {
+    grid-area: event;
+    display: flex;
+    justify-content: space-around;
+}
+
+.index-main .event article {
+    background-color: var(--darkred);
+    margin: 2rem;
+    font-size: 1.5rem;
+}
+
+.event img {
+   max-width: fit-content;
+}
+/* ? Nav elements for Shops? */
 nav > ul{
     list-style-type: none;
     display: flex;
@@ -38,9 +140,7 @@ ul > li:hover p{
     background-color: greenyellow;
     z-index: 1;
 }
-table{
-    text-align: left;
-}
+
 button{
     background-color: white;
     border: none;
