--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,8 @@
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 16px;
-    background-color: rgba(250, 235, 215, 0.37);
-    max-width: 1440px;
+    background-color: #faebd75e;
+    max-width: 1300px;
 }
 
 p {
@@ -40,15 +40,18 @@ header {
 }
 
 /* Navigation in the header */
+
 header > nav li a{
     text-decoration: none;
     color: var(--white);
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     transition: all .2s ease-in-out;
+    font-weight: 400;
 }
 
 header nav li {
     padding-right: 4rem;
+    margin: 1rem 0;
 }
 
 header nav li:hover a {
@@ -71,11 +74,12 @@ header nav li:hover a {
 .index-main .hero {
     grid-area: hero;
     background-image: url("../images/hero.jpg");
+    width: fit-content;
 }
 
 .index-main .hero h1 {
-    margin: 1.3rem 2rem 0;
-    font-size: 6vw;
+    margin: 3rem;
+    font-size: 4vw;
     font-weight: 200;
     color: var(--white);
     text-shadow: 2px 2px 1px var(--black);
@@ -90,8 +94,9 @@ header nav li:hover a {
 }
 
 .market * {
-    margin: 1rem;
-    font-size: 1.1rem;
+    margin: 2rem;
+    font-size: 1.2rem;
+    font-weight: 400;
 }
 
 .market h2 {
@@ -100,6 +105,37 @@ header nav li:hover a {
 
 table{
     text-align: left;
+}
+
+/* Button for the market section */
+
+.button{
+    background-color: var(--darkred);
+    text-align: center;
+    text-decoration: none;
+    margin-left: 2rem;
+    padding: 1rem;
+    border-radius: 10px;
+    transition: all .2s ease-in-out;
+}
+
+.button > a{
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: var(--peach);
+    text-align: center;
+    font-weight: 600;
+    transition: all .2s ease-in-out;
+}
+
+.button:hover {
+    box-shadow: 2px 3px 2px rgba(0, 0, 0, 0.356);
+}
+
+.button:hover a {
+    color: var(--white);
+    cursor: pointer; 
 }
 /* Events section for the index page */
 
@@ -112,11 +148,12 @@ table{
 .index-main .event article {
     background-color: var(--darkred);
     margin: 2rem;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    padding: 1rem;
 }
 
 .event img {
-   max-width: fit-content;
+ 
 }
 /* ? Nav elements for Shops? */
 nav > ul{
@@ -141,23 +178,7 @@ ul > li:hover p{
     z-index: 1;
 }
 
-button{
-    background-color: white;
-    border: none;
-    color: black;
-    padding: 10px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border: solid black 1px;
-}
-button > a{
-    text-decoration: none;
-    color: black;
-}
+
 div.gallery{
     background-color: coral;
     width: 10em;
