--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     --darkorange: #D78041;
     --lightorange: #F2A766;
     --white: #fff;
-    --peach: #faebd75e;
+    --green: #054900;
 }
 /* Style for the whole site */
 
@@ -13,182 +13,185 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
 
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 16px;
-    background-color: #faebd75e;
-    max-width: 1300px;
+    max-width: 1400px;
 }
 
 p {
     line-height: 1.5;
 }
+/* Index page */
 
-/* Grid for the index page */
+/* Grid for the whole index page */
+
 .index-container {
     display: grid;
-    grid-template-rows: auto auto auto;
+    grid-template-areas: 
+    'header'
+    'main'
+    'footer'
+    ;
 }
 
-/* Header section */
-header {
-    display: flex;
-    justify-content: space-between;
+/* Header grid */
+
+.index-container header {
+    grid-area: header;
+    display: grid;
     background-color: var(--darkred);
+    grid-template-areas: 
+    'logo nav'
+    ;
 }
 
-/* Navigation in the header */
+/* Header navigation */
 
-header > nav li a{
-    text-decoration: none;
-    color: var(--white);
-    font-size: 1.2rem;
-    transition: all .2s ease-in-out;
-    font-weight: 400;
-}
-
-header nav li {
-    padding-right: 4rem;
+.index-container header > nav {
+    grid-area: nav;
+    justify-self: end;
     margin: 1rem 0;
 }
 
-header nav li:hover a {
+
+.index-container header nav ul {
+    display: flex;
+
+}
+
+.index-container header nav li {
+    list-style: none;
+}
+
+.index-container header li a {
+    text-decoration: none;
+    color: var(--white);
+    padding-right: 3rem;
+    font-size: 1.4rem;
+    transition: all .2s ease-in-out;
+}
+
+.index-container header li:hover a {
     color: var(--lightorange);
     cursor: pointer;
 }
 
-/* Grid for the main section of the index page */
+/* Grid for the whole main part of the index page */
 
-.index-main {
+.index-container main {
+    grid-area: main;
     display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
     grid-template-areas: 
     'hero'
     'market'
     'event'
     ;
-    grid-template-rows: .7fr 1fr 1fr;
 }
-/* Hero section for the index page */
-.index-main .hero {
+
+/* Index, main hero */
+
+.index-container .hero {
     grid-area: hero;
     background-image: url("../images/hero.jpg");
-    width: fit-content;
 }
 
-.index-main .hero h1 {
-    margin: 3rem;
-    font-size: 4vw;
+
+.index-container .hero h1 {
+    font-size: 5rem;
+    color: white;
+    margin: 5rem;
     font-weight: 200;
-    color: var(--white);
-    text-shadow: 2px 2px 1px var(--black);
+    text-shadow: 1px 2px 2px rgb(0, 0, 0);
 }
 
-/* Market section for the index page */
 
-.index-main .market {
+
+
+/* Index, main market */
+.index-container .market {
     grid-area: market;
+    background-color: var(--darkred);
     display: grid;
-    grid-template-columns: 1.7fr 1fr;
+    grid-template-columns: 1fr .4fr 1fr;
 }
 
-.market * {
-    margin: 2rem;
-    font-size: 1.2rem;
-    font-weight: 400;
+.index-container .market > article {
+    grid-column: 1 / span 2;
+    margin: 5rem;
 }
 
-.market h2 {
+.index-container .market  aside {
+    grid-column: 3;
+    margin: 5rem;
+}
+
+.index-container .market h2 {
     font-size: 2rem;
+    margin-bottom: 2rem;
+    text-shadow: 2px 2px 1px black;
 }
 
-table{
-    text-align: left;
+.index-container .market h2,p {
+    color: white;
 }
 
-/* Button for the market section */
-
-.button{
-    background-color: var(--darkred);
-    text-align: center;
-    text-decoration: none;
-    margin-left: 2rem;
-    padding: 1rem;
-    border-radius: 10px;
-    transition: all .2s ease-in-out;
+.index-container .market table {
+    color: white;
+    line-height: 1.5;
 }
 
-.button > a{
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: var(--peach);
-    text-align: center;
-    font-weight: 600;
-    transition: all .2s ease-in-out;
-}
+/* Index, main market buttons */
+ .index-container .market .button {
+     margin-top: 2rem;
+     margin-right: 2rem;
+     padding: 1rem 2rem;
+     border-radius: 10%;
+     background-color: var(--darkred);
+     box-shadow: 4px 5px 3px black;
+ }
 
-.button:hover {
-    box-shadow: 2px 3px 2px rgba(0, 0, 0, 0.356);
-}
+ .index-container .market .button a {
+     text-decoration: none;
+     color: var(--white);
+     text-transform: uppercase;
+     font-size: 1.2rem;
+     transition: all .2s ease-in-out;
+ }
 
-.button:hover a {
-    color: var(--white);
-    cursor: pointer; 
-}
-/* Events section for the index page */
+ .index-container .market .button:hover {
+     box-shadow: none;
+     cursor: pointer;
+     
+ }
 
-.index-main .event {
+/* Index, main events */
+
+.index-container .event {
     grid-area: event;
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-areas: 
+    'santa tree black'
+    ;
 }
 
-.index-main .event article {
-    background-color: var(--darkred);
-    margin: 2rem;
-    font-size: 1.2rem;
-    padding: 1rem;
+.index-container .event .santa {
+    grid-area: santa;
 }
 
-.event img {
- 
-}
-/* ? Nav elements for Shops? */
-nav > ul{
-    list-style-type: none;
-    display: flex;
-    margin: 0;
-    padding: 10px;
-}
-ul li {
-    position: relative;
-}
-ul p{
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: none;
-}
-ul > li:hover p{
-    display:block;
-    position: absolute;
-    background-color: greenyellow;
-    z-index: 1;
+.index-container .event .tree {
+    grid-area: tree;
 }
 
+.index-container .event .black {
+    grid-area: black;
+}
 
-div.gallery{
-    background-color: coral;
-    width: 10em;
-    margin: 20px;
-}
-article.gallery{
-    background-color: chocolate;
-    width: 7em;
-    margin: 5px;
-}
-footer{
-    background-color: blanchedalmond;
+/* Grid for index footer */
+
+footer {
+    grid-area: footer;
 }
