--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 16px;
     max-width: 1400px;
+    background-color: var(--darkred);
 }
 
 p {
@@ -42,10 +43,13 @@ p {
 .index-container header {
     grid-area: header;
     display: grid;
-    background-color: var(--darkred);
+    background-color: black;
     grid-template-areas: 
     'logo nav'
     ;
+    position: sticky;
+    top: 0;
+    
 }
 
 /* Header navigation */
@@ -97,6 +101,7 @@ p {
 .index-container .hero {
     grid-area: hero;
     background-image: url("../images/hero.jpg");
+    border-bottom: .5rem solid var(--lightred);
 }
 
 
@@ -117,6 +122,7 @@ p {
     background-color: var(--darkred);
     display: grid;
     grid-template-columns: 1fr .4fr 1fr;
+    border-bottom: .5rem solid var(--lightred);
 }
 
 .index-container .market > article {
@@ -176,10 +182,47 @@ p {
     grid-template-areas: 
     'santa tree black'
     ;
+    margin: 0 5rem;
+    
+}
+
+.index-container .event article {
+    background-color: var(--darkred);
+    box-shadow: 6px 6px 2px black;
+    border-radius: 5%;
+    margin: 3rem 0;
+    border: 3px solid var(--lightred);
+    transition: all .5s ease-in-out;
+}
+
+.index-container .event article:hover {
+    box-shadow: none;
+    cursor: pointer;
+    
+}
+
+.index-container .event article img {
+    height: 70%;
+    width: 95%;
+    border-top-left-radius: 5%;
+    border-top-right-radius: 3%;
+}
+
+.index-container .event article h3,p {
+    line-height: 1.3;
+}
+
+.index-container .event article h3 {
+    font-size: 1.3rem;
 }
 
 .index-container .event .santa {
     grid-area: santa;
+}
+
+.index-container .event .tree {
+    width: 80%;
+    justify-self: center;
 }
 
 .index-container .event .tree {
@@ -194,4 +237,24 @@ p {
 
 footer {
     grid-area: footer;
+    border-top: .5rem solid var(--lightred);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background-color: black;
+}
+
+footer section {
+    margin: 1rem 0;
+    padding: 0 5rem;
+}
+
+footer section a {
+    text-decoration: none;
+    color: white;
+    transition: all .2s ease-in-out;
+}
+
+footer section a:hover {
+    cursor: pointer;
+    color: var(--darkorange);
 }
