--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,7 +185,7 @@ p {
     align-items: stretch; */
 
     display: grid;
-  grid-template-rows: auto auto;
+  grid-template-rows: auto;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 3rem 1rem;
 
@@ -201,6 +201,7 @@ p {
     display: flex;
   flex-direction: column;
   gap: 0.5rem; 
+  margin: 3rem;
 }
 
 .index-container .event article:hover {
@@ -214,12 +215,14 @@ p {
     width: 100%;
 }
 
-.index-container .event article h3,p {
+.index-container .event > article h3,p {
     line-height: 1.3;
+    padding-left: 1rem;
 }
 
 .index-container .event article h3 {
     font-size: 1.3rem;
+    color: white;
 }
 
 .index-container .event .santa {
