--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,6 +70,37 @@ header nav li:hover a {
     color: var(--lightorange);
     cursor: pointer;
 }
+/*Dropdown menu  */
+.shops-container header nav > ul > li {
+	position: relative;
+    display: block;
+}
+
+header nav > ul > li:hover > .market-menu { 
+    display: block;
+}
+
+ header .market-menu {
+     display: none;
+     min-width: 10rem;
+     width: max-content;
+     background-color: var(--lightred);
+     color: white;
+     text-decoration: none;
+     position: absolute;
+     left: 0;
+     padding: 5px;
+     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+     z-index: 1;
+ }
+
+ header nav > ul > li:hover a{
+     color: white;
+ } 
+
+ header nav > ul > li:hover a:hover {
+     color: var(--darkorange);
+ }
 
 /* Grid for the main section of the index page */
 
