--- a/assets/css/funfair.css
+++ b/assets/css/funfair.css
@@ -122,7 +122,8 @@ main {
 
 /* Funfair hero image */
 .logo {
-    max-width: 200px;
+    max-width: 250px;
+    padding-left: 2.5rem;
 }
 
 .hero {
