--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,8 @@ header nav > ul > li:hover > .market-menu {
 /* Index, main hero */
 
 .index-container .logo {
-    max-width: 200px;
+    max-width: 250px;
+    padding-left: 2.5rem;
 }
 
 .index-container .hero {
