--- a/assets/css/funfair.css
+++ b/assets/css/funfair.css
@@ -200,4 +200,41 @@ main {
       cursor: pointer;
       color: var(--darkorange);
   }
+
+
+  /* Media queries */
+
+/* Media queries for mobile */
+
+@media screen and (max-width: 450px) {
+
+    main {
+        grid-template-columns: 1fr;
+        grid-template-rows: .3fr 2fr;
+    }
+
+   .hero h1 {
+        font-size: 6rem;
+    }
+
+     .event {
+        display: grid;
+        grid-template-rows: auto auto auto;
+        grid-template-columns: auto;
+      }
+
+    .event article {
+        margin: 3rem;
+    }
+
+     .event article h3 {
+        font-size:  2rem;
+    }
+
+    .event article p {
+        font-size:  1.5rem;
+        line-height: 1.5;
+    }
+
+}
   
