--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,10 @@
     box-sizing: border-box;
   }
 
+  html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 16px;
