--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,7 +22,7 @@
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 16px;
-    background-color: #faebd75e;
+    background-color: var(--white);
     max-width: 1300px;
 }
 
@@ -112,10 +112,9 @@ header nav > ul > li:hover > .market-menu {
     display: grid;
     grid-template-areas: 
     'hero'
-    'market'
-    'event'
+    'shops'
     ;
-    grid-template-rows: 20% 40% 40%;
+    grid-template-rows: 40% 40%;
 }
 header {
     grid-area: header;
@@ -154,7 +153,7 @@ main {
     grid-template-rows: 0.5fr auto;
     grid-template-areas: 
     'hero'
-    'event';
+    'shops';
 }
 /* Funfair hero image */
 
@@ -171,87 +170,26 @@ main {
     text-shadow: 1px 2px 2px rgb(0, 0, 0);
 }
 
-/* Market section for the index page */
-
-.index-main .market {
-    grid-area: market;
+/* Index, main shops */
+.shops {
+    grid-area: shops;
     display: grid;
-    grid-template-columns: 1.7fr 1fr;
-}
-
-.market * {
-    margin: 2rem;
-    font-size: 1.2rem;
-    font-weight: 400;
-}
-
-.market h2 {
-    font-size: 2rem;
-}
-
-table{
-    text-align: left;
-}
-
-/* Button for the market section */
-
-.button{
-    background-color: var(--darkred);
-    text-align: center;
-    text-decoration: none;
-    margin-left: 2rem;
-    padding: 1rem;
-    border-radius: 10px;
-    transition: all .2s ease-in-out;
-}
-
-.button > a {
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: var(--peach);
-    text-align: center;
-    font-weight: 600;
-    transition: all .2s ease-in-out;
-}
-
-.button:hover {
-    box-shadow: 2px 3px 2px rgba(0, 0, 0, 0.356);
-}
-
-.button:hover a {
-    color: var(--white);
-    cursor: pointer; 
-}
-/* Events section for the index page */
-
-.index-main .event {
-    grid-area: event;
-    display: grid;
+    grid-template-rows:  auto;
     grid-template-columns: 1fr 1fr 1fr;
-    justify-content: space-between;
-}
+    margin: 0 5rem; 
+  }
+  
+ .shops article {
+      margin: 2rem;
+  }
+.shops article h3 {
+      font-size: 2rem;
+      padding-left: 1rem;
+      margin-bottom: 1rem;
+  }
 
-.index-main .event article {
-    background-color: var(--darkred);
-    margin: 2rem;
-    border-radius: 5%;
-}
 
-.index-main .event img {
-    height: 50%;
-}
-
-.index-main > .event h3,
-time,
-p {
-    font-size: 1.5rem;
-    color: var(--white);
-    padding-left: 1rem;
-    margin: 1rem;
-}
-
-/* ? Nav elements for Shops? */
+/* Nav elements for Shops */
 header > nav > ul{
     list-style-type: none;
     display: flex;
@@ -260,6 +198,7 @@ header > nav > ul{
 }
 section > article > ul li {
     position: relative;
+    list-style: none;
 }
 ul.shop p{
     position: absolute;
@@ -273,17 +212,13 @@ ul.shop > li:hover p{
     background-color: greenyellow;
     z-index: 1;
 }
-
-
-div.gallery{
-    background-color: coral;
-    width: 10em;
-    margin: 20px;
+.imagemarket img {
+    width: 100%;
+    height: 100%;;
 }
-article.gallery{
-    background-color: chocolate;
-    width: 7em;
-    margin: 5px;
+.imagemarket h2{
+    size: 2em;
+    text-align: center;
 }
 footer{
     background-color: blanchedalmond;
